workspace/log/build_2024-03-04_08-07-21/sensors/stderr.log
  File "/home/ubuntu/virtualttbot/workspace/install/sensors/lib/python3.8/site-packages/sensors/capstone.py", line 168
    "angular":self.twist_msg.angular
    ^
SyntaxError: invalid syntax

